recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: not found: value level
      	snowSide(levels+1, length/level)
                                  ^